--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
 
   <footer class="white-section" id="footer">
     <div class="container-fluid">
-      <i class="social-icon fab fa-facebook-f"></i>
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-instagram"></i>
-      <i class="social-icon fas fa-envelope"></i>
+      <a href="https://www.facebook.com/profile.php?id=100025724131527"><i class="social-icon fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/_kr.satyam/?hl=en"><i class="social-icon fab fa-instagram"></i></i></a>
+      <a href="https://twitter.com/_kr_satyam"><i class="social-icon fab fa-twitter"></i></a>
+      <a href="mailto:krsatyam278@gmail.com"><i class="social-icon fas fa-envelope"></i></i></a>
       <p>© Copyright 2018 TinDog</p>
     </div>
   </footer>
